Working on apikey permissions like subjects
