# src/Esquio.UI.Api/Scenarios/ApiKeys/Add/AddApiKeyRequest.cs
@@ -7,6 +7,12 @@ namespace Esquio.UI.Api.Scenarios.ApiKeys.Add
     {
         public string Name { get; set; }
 
+        public bool Read { get; set; }
+
+        public bool Write { get; set; }
+
+        public bool Management { get; set; }
+
         public DateTime? ValidTo { get; set; }
     }
 }
